kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docstest
  labels:
    app: docstest
