kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docstest
  name: docstest
  namespace: docstest
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http-service
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: docstest
  sessionAffinity: None
  type: ClusterIP
