kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: docstest
  name: docstest
  namespace: docstest
spec:
  gateways:
    - istio-system/public
  hosts:
    - docs.bevcomm.beveradb.com
  http:
    - route:
        - destination:
            host: docstest.docstest.svc.cluster.local
            port:
              number: 80
